side_nav: fixed initialization on small screen - public lists started visible - togglers weren't toggled

--- a/app/modules/inventory/side_nav/scss/_side_nav.scss
+++ b/app/modules/inventory/side_nav/scss/_side_nav.scss
@@ -113,8 +113,9 @@
   #sideNav{
     margin-top: 0.2em;
   }
-  #publicList{
-    display: none;
+  #publicList, #groupsList, #usersList, #membersList{
+    max-height: 10em;
+    overflow: auto;
   }
   #mainUser{
     width: 100%;
