--- a/app/modules/users/scss/_user_li.scss
+++ b/app/modules/users/scss/_user_li.scss
@@ -100,7 +100,7 @@ $user-bg: #ddd;
         @include display-flex(row, center, flex-start);
         .inventoryLength{
           /*Small screens*/
-          @media screen and (max-width: $very-small-screen) {
+          @media screen and (max-width: 250px) {
             display: none;
           }
         }
